--- a/swagger/paths/contacts/get.yaml
+++ b/swagger/paths/contacts/get.yaml
@@ -98,3 +98,7 @@ responses:
                   example: true
   '404':
     $ref: '../../components/responses/404.yaml'
+  '401':
+    $ref: '../../components/responses/401.yaml'
+  '400':
+    $ref: '../../components/responses/400.yaml'
