--- a/swagger/paths/contacts/{contactId}/patch.yaml
+++ b/swagger/paths/contacts/{contactId}/patch.yaml
@@ -12,11 +12,49 @@ parameters:
     schema:
       type: string
       example: '65ca67e7ae7f10c88b598384'
+requestBody:
+  content:
+    multipart/form-data:
+      schema:
+        type: object
+        properties:
+          name:
+            description: "Contact's name"
+            type: string
+            example: 'John Doe'
+          phoneNumber:
+            description: "Contact's phone number"
+            type: string
+            example: '555-44-33'
+          email:
+            description: "Contact's email"
+            type: string
+            example: 'john@gmail.com'
+          isFavourite:
+            description: 'Mark on a favorite contact'
+            type: boolean
+            example: false
+          contactType:
+            description: "Contact's type. Default value -'personal'"
+            type: string
+            enum: ['personal', 'work', 'home']
+            example: 'personal'
+          userId:
+            description: "Contact's user id"
+            type: string
+            example: '65e4decdd286b30065d54af9'
+          photo:
+            description: "Contact's photo"
+            type: string
+            format: binary
+      encoding:
+        photo:
+          contentType: image/*
 responses:
   '200':
     description: 'Successfully patched a contact!'
     content:
-      multipart/form-data:
+      application/json:
         schema:
           type: object
           required:
